Fix Bootstrap integration by correcting script and stylesheet links in index.html; add index.css for custom font styling.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
     href="node_modules/bootstrap/dist/css/bootstrap.min.css"
   />
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="src/css/index.css" />
   <body>
     <div class="container">
       <h1>Hello, Bootstrap!</h1>
@@ -55,6 +55,6 @@
       </div>
     </div>
 
-    <script type="module" src="src/js/main.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
