Update .gitignore, package.json, and index.css to include Boxicons and clean up node_modules entry

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </div>
       </div>
     </div>
+    <i class="bx bx-home"></i>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
